# archibald

./: Cargo.toml  README.md
.github/workflows/: docs.yml
examples/: brainfuck.rs  const_fn.rs  primitive.rs  simple_vm.rs
src/: lib.rs
